--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -41,11 +41,11 @@ author_info:
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
     funders: Grant XXXXXXX
   -
-    github: yournamehere
-    name: Add Yourself
-    initials: YOU
-    orcid: XXXX-XXXX-XXXX-XXXX
-    email: you@example.com
+    github: jzuhone
+    name: John A. ZuHone
+    initials: JAZ
+    orcid: 0000-0003-3175-2347
+    email: john.zuhone@cfa.harvard.edu
+    twitter: astrojaz
     affiliations:
-      - Department of Something, University of Whatever
-      - Department of Whatever, University of Something
+      - Harvard-Smithsonian Center for Astrophysics
