--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -110,6 +110,16 @@ authors:
     email: mdeval@psi.edu
     affiliations:
       - Planetary Science Institute
+-
+    github: cphyc
+    name: Corentin Cadiou
+    initials: CC
+    orcid: 0000-0003-2285-0332
+    twitter: cphyc
+    email: c.cadiou@ucl.ac.uk
+    affiliations:
+      - Department of Physics and Astrophysics, University College London
+      - Institut d'Astrophysique de Paris
   -
     github: yournamehere
     name: Add Yourself
