Added myself to the list of authors, as requested
Matt requested I do this, so here I am!

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -111,6 +111,14 @@ authors:
     affiliations:
       - Planetary Science Institute
   -
+    github: keltonhalbert
+    name: Kelton Halbert
+    initials: KTH
+    orcid: 0000-0001-6898-2731
+    email: kthalbert@wisc.edu
+    affiliations:
+      - Cooperative Institute for Meteorological Satellite Studies, The University of Wisconsin, Madison
+  -
     github: yournamehere
     name: Add Yourself
     initials: YOU
