--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -162,6 +162,15 @@ authors:
     affiliations:
       - Observatoire de la Côte d'Azur, Université de Nice
   -
+    github: chrishavlin
+    name: Christopher Havlin
+    initials: CH 
+    orcid: 0000-0003-0585-8236
+    email: chavlin@illinois.edu
+    affiliations:
+      - School of Information Sciences, University of Illinois at Urbana-Champaign
+    funders: Grant XXXXXXX
+  -
     github: yournamehere
     name: Add Yourself
     initials: YOU
