--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -4,6 +4,8 @@ keywords:
   - markdown
   - publishing
   - manubot
+pandoc:
+  manubot-fail-on-errors: True
 lang: en-US
 authors:
   # NOTE: These are not in any specific order.
