--- a/content/frontends.yaml
+++ b/content/frontends.yaml
@@ -12,10 +12,8 @@ frontends:
   - name: amrvac
     index_type: ['grid']
     comments: |
-      MPI-AMRVAC is a parallel adaptive mesh refinement framework aimed at
-      solving (primarily hyperbolic) partial differential equations by a number
-      of different numerical schemes. The emphasis is on (near) conservation
-      laws and on shock-dominated problems in particular.
+      MPI-AMRVAC is a parallel adaptive mesh refinement framework aimed at solving (primarily hyperbolic) partial differential equations by a number of different numerical schemes.
+      The emphasis is on (near) conservation laws and on shock-dominated problems in particular.
     citations:
       - '@amrvac-paper'
       - '@doi:10.1088/0067-0049/214/1/4'
@@ -27,41 +25,28 @@ frontends:
   - name: arepo
     index_type: ['particle']
     comments: |
-      While listed as a "particle" dataset, AREPO data is properly described as
-      a moving mesh.  For visualization purposes, yt treats it similarly to an
-      SPH dataset; some efforts have been made to properly apply
-      nearest-neighbor interpolation, but these have not been mainlined in the
-      yt visualization routines as of yet.
+      While listed as a "particle" dataset, AREPO data is properly described as a moving mesh.
+      For visualization purposes, yt treats it similarly to an SPH dataset; some efforts have been made to properly apply nearest-neighbor interpolation, but these have not been mainlined in the yt visualization routines as of yet.
     citations: []
     usage_citations: []
   - name: art
     index_type: ['octree', 'particle']
     comments: |
-      ART, or 'NMSU-ART' as it is occasionally referred to internally, is an
-      octree-based code that is often used for cosmology simulations and galaxy
-      formation simulations.  yt supports two sets of data formats in the
-      NMSU-ART family.  The first is a particle-only format, where the
-      particles are stored independently of any gas structure.  The second is
-      the hydro data format, wherein gas values are stored organized into an
-      octree.  Each of these constitutes a different indexing system, sharing
-      similar datatypes, units, and so forth.
+      ART, or 'NMSU-ART' as it is occasionally referred to internally, is an octree-based code that is often used for cosmology simulations and galaxy formation simulations.
+      yt supports two sets of data formats in the NMSU-ART family.
+      The first is a particle-only format, where the particles are stored independently of any gas structure.
+      The second is the hydro data format, wherein gas values are stored organized into an octree.
+      Each of these constitutes a different indexing system, sharing similar datatypes, units, and so forth.
     citations: []
     usage_citations: []
   - name: artio
     index_type: ['octree']
     comments: |
-      The ARTIO frontend, which shares some ancestry with the `art` or
-      'NMSU-ART' frontend, utilizes a special purpose library for input/output
-      operations called `libartio`, which is bundled with yt.
+      The ARTIO frontend, which shares some ancestry with the `art` or 'NMSU-ART' frontend, utilizes a special purpose library for input/output operations called `libartio`, which is bundled with yt.
       
-      Utilizing `libartio` is interesting from a historical perspective, as it
-      provided an opportunity to reorganize the way that yt understood indexing
-      of octree datasets.  Whereas previously yt required a full understanding
-      of data distribution, the `artio` frontend outsourced much of that to the
-      internal library, which it regarded as essentially an opaque API.
-      Reducing the amount of internal bookkeepping that yt had to do provided a
-      lighter-weight interface to the data, which in turn has enabled other
-      frontends to be created using opaque APIs.
+      Utilizing `libartio` is interesting from a historical perspective, as it provided an opportunity to reorganize the way that yt understood indexing of octree datasets.
+      Whereas previously yt required a full understanding of data distribution, the `artio` frontend outsourced much of that to the internal library, which it regarded as essentially an opaque API.
+      Reducing the amount of internal bookkeepping that yt had to do provided a lighter-weight interface to the data, which in turn has enabled other frontends to be created using opaque APIs.
     citations: []
     usage_citations: []
   - name: athena
@@ -92,18 +77,11 @@ frontends:
   - name: enzo
     index_type: ['grid']
     comments: |
-      Enzo was the very first code supported by yt, and while many remnants of
-      that have been removed, many still remain.  During the development of yt
-      3.0 in particular, many "enzo-isms" were removed; however, as Enzo uses a
-      patch-based grid data format, much of the naming conventions for grid
-      objects still mirror those in use in Enzo.  These include names such as
-      `GridLeftEdge` and `ActiveDimensions` (which refers to the dimensions not
-      including ghost zones).
+      Enzo was the very first code supported by yt, and while many remnants of that have been removed, many still remain.
+      During the development of yt 3.0 in particular, many "enzo-isms" were removed; however, as Enzo uses a patch-based grid data format, much of the naming conventions for grid objects still mirror those in use in Enzo.
+      These include names such as `GridLeftEdge` and `ActiveDimensions` (which refers to the dimensions not including ghost zones).
       
-      There are several 'sub-frontends' within the Enzo frontend; these include
-      dedicated 1D and 2D readers, as well as historical frontends (of varying
-      functionality) for reading HDF4, 'unpacked' HDF5 and other sub-dialects
-      of Enzo.
+      There are several 'sub-frontends' within the Enzo frontend; these include dedicated 1D and 2D readers, as well as historical frontends (of varying functionality) for reading HDF4, 'unpacked' HDF5 and other sub-dialects of Enzo.
     citations: ['@doi:10.1088/0067-0049/211/2/19']
     usage_citations: []
   - name: enzo_e
@@ -115,9 +93,8 @@ frontends:
   - name: exodus_ii
     index_type: ['unstructured mesh']
     comments: |
-      Exodus II, and its output in NetCDF4 format, was the initial driver for
-      higher-order unstructured mesh support in yt.  The original driver for
-      developing this format was for simulations of nuclear reactors.
+      Exodus II, and its output in NetCDF4 format, was the initial driver for higher-order unstructured mesh support in yt.
+      The original driver for developing this format was for simulations of nuclear reactors.
     citations: []
     usage_citations: []
   - name: fits
@@ -208,7 +185,8 @@ frontends:
     usage_citations: []
   - name: sph
     index_type: ['particle']
-    comments: A base frontend from which other SPH-type frontends can be defined.
+    comments: |
+      A base frontend from which other SPH-type frontends can be defined.
     citations: []
     usage_citations: []
   - name: stream
@@ -228,6 +206,7 @@ frontends:
     usage_citations: []
   - name: ytdata
     index_type: ['particle']
-    comments: An internal frontend for re-loading saved data and derived data
+    comments: |
+      An internal frontend for re-loading saved data and derived data
     citations: []
     usage_citations: []
