Update my affiliation (Clément Robert)

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -159,9 +159,9 @@ authors:
     name: Clément Robert
     initials: CMTR
     orcid: 0000-0001-8629-7068
-    email: clement.robert@oca.eu
+    email: cmt.robert@univ-grenoble-alpes.fr
     affiliations:
-      - Observatoire de la Côte d'Azur, Université de Nice
+      - Institut de Planétologie et d'Astrophysique de Grenoble (IPAG), Université Grenoble Alpes, France
   -
     github: chrishavlin
     name: Christopher Havlin
